# notify-server-rs

./: Cargo.toml  LICENSE
src/: main.rs
