[package]
name = "notify-server-rs"
version = "0.1.0"
authors = ["Douile <25043847+Douile@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
